<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/main_Bground"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/infoBand_linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/main_default_spinner_info_band_Layout"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_frameLayout">

        <TextView
            android:id="@+id/band1_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main_default_spinner_info_band_Bground"
            android:ems="10"
            android:gravity="center"
            android:text="@string/main_default_band1"
            android:textColor="@color/main_default_spinner_info_band_text"
            android:textSize="@dimen/main_spinner_info_band_text" />

        <TextView
            android:id="@+id/band2_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main_default_spinner_info_band_Bground"
            android:ems="10"
            android:gravity="center"
            android:text="@string/main_default_band2"
            android:textColor="@color/main_default_spinner_info_band_text"
            android:textSize="@dimen/main_spinner_info_band_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_linearLayout1"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_spinner_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBand_linearLayout1">

        <Spinner
            android:id="@+id/band1_spinner"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/main_color_band_1_2"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Spinner
            android:id="@+id/band2_spinner"
            style="@android:style/Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/main_color_band_1_2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoAndSpinners_linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_linearLayout1">

        <LinearLayout
            android:id="@+id/infoBand_linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_default_spinner_info_band_Layout"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/band3_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/main_default_spinner_info_band_Bground"
                android:ems="10"
                android:gravity="center"
                android:text="@string/main_default_band3"
                android:textColor="@color/main_default_spinner_info_band_text"
                android:textSize="@dimen/main_spinner_info_band_text"
                tools:layout_editor_absoluteX="-21dp"
                tools:layout_editor_absoluteY="290dp" />

            <TextView
                android:id="@+id/band4_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/main_default_spinner_info_band_Bground"
                android:ems="10"
                android:gravity="center"
                android:text="@string/main_default_band4"
                android:textColor="@color/main_default_spinner_info_band_text"
                android:textSize="@dimen/main_spinner_info_band_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinner_linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_spinner_height"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/multiplier_spinner"
                style="@android:style/Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/main_color_multiplier" />

            <Spinner
                android:id="@+id/tolerance_spinner"
                style="@android:style/Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/main_color_tolerance" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/result_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/main_result_drawable"
        android:ems="10"
        android:textColor="@color/main_plainText_result_text"
        android:textSize="@dimen/main_plainText_result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_title_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/main_title_drawable"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:text="@string/main_title"
        android:textColor="@color/main_title_text"
        android:textSize="@dimen/main_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoAndSpinners_linearLayout" />

    <TextView
        android:id="@+id/resultInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/main_textview_info_drawable"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/main_result_info"
        android:textColor="@color/main_plainText_info_text"
        android:textSize="@dimen/main_plainText_info_text"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/result_textView"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/title_frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/main_resolve_button"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_textView">

        <Button
            android:id="@+id/resolve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/Crimson"
            android:padding="0dp"
            android:text="@string/main_resolve_button"
            android:textColor="@color/main_resolve_text"
            android:textSize="@dimen/main_resolve_text" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>